Transductor-000.cywrk.Archive01/Transductor.cydsn/REBUILD.log
--------------- Rebuild Started: 11/12/2025 12:09:06 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:91:17: error: too few arguments to function 'Chart_1_Plot'
                 Chart_1_Plot(y[j]);
                 ^
In file included from Generated_Source\PSoC5/project.h:33:0,
                 from main.c:12:
Generated_Source\PSoC5/Chart_1.h:74:7: note: declared here
 void  Chart_1_Plot(float32 V1, float32 V2); // universal overload procedure 
       ^
main.c: In function 'my_Start':
main.c:112:5: error: expected ';' before 'Clock_Trig_Start'
     Clock_Trig_Start();
     ^
main.c: At top level:
main.c:133:6: error: redefinition of 'DMA_Config'
 void DMA_Config(){
      ^
main.c:116:6: note: previous definition of 'DMA_Config' was here
 void DMA_Config()
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/12/2025 12:09:07 ---------------
